--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       # Step 3 - Add tests and linting here
+      - name: run test
+        run: npm test
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
